add template trees and rocks

--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,9 @@ Assets/FantasyEnvironments.meta
 
 Assets/TerrainSampleAssets/
 Assets/TerrainSampleAssets.meta
+
+Assets/Holotna/
+Assets/Holotna.meta
+
+Assets/Realistic Rock/
+Assets/Realistic Rock.meta
